--- a/YouTubi/index.html
+++ b/YouTubi/index.html
@@ -18,7 +18,7 @@
             </button>
             <i class="fa-brands fa-youtube fa-xl" style="color: #ff0000;"></i>
             <span class="logo-text">
-                YouTube 
+                YouTubi 
             </span>
         </div>
         <form aria-label="Search form" class="search-form" onsubmit="return false;" role="search">
