Update sidebar videos and page title
Replaced One Piece themed sidebar videos with new video entries and updated their thumbnails, titles, channels, and view counts. Changed the page title from 'YouTube One Piece' to 'YouTubi' for better branding.

--- a/YouTubi/index.html
+++ b/YouTubi/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <title>
-        YouTube One Piece
+        YouTubi
     </title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/40640f545f.js" crossorigin="anonymous"></script>
@@ -114,91 +114,90 @@
         <aside aria-label="Vídeos relacionados" class="right-sidebar">
             <article class="sidebar-item">
                 <img alt="Thumbnail" height="94"
-                    src="https://i.pinimg.com/736x/70/14/db/7014db0a7d3df76ea2246aee05034a83.jpg" width="168" />
+                    src="https://i.ytimg.com/vi/X_Leii9P5Ag/hqdefault.jpg?sqp=-oaymwEmCKgBEF5IWvKriqkDGQgBFQAAiEIYAdgBAeIBCggYEAIYBjgBQAE=&rs=AOn4CLBt5tEbzbW8EfyK-CafVSrWGrUMzg" width="168" />
                 <div class="sidebar-text">
                     <p>
-                        One Piece Episódio 1 - O Início da Jornada
+                        TRUMP x XANDÃO
                     </p>
                     <p>
-                        OnePieceChannel
+                        CORTES - Leon e Nilce [Oficial]
                     </p>
                     <p>
-                        2,1 mil visualizações
+                        225 mil visualizações - há 1 dia
                     </p>
                     <p>
-                        Transmitido há 2 dias
+                        Novo
                     </p>
                 </div>
             </article>
             <article class="sidebar-item">
                 <img alt="Thumbnail" height="94"
-                    src="https://i.pinimg.com/736x/84/68/44/84684467e008de73218276315a431ecd.jpg" width="168" />
+                    src="https://i.ytimg.com/vi/zOIND7DFRg4/hqdefault.jpg?sqp=-oaymwEmCKgBEF5IWvKriqkDGQgBFQAAiEIYAdgBAeIBCggYEAIYBjgBQAE=&rs=AOn4CLDiGgzI-hFVtIfreLNnVO1haLtTqg" width="168" />
                 <div class="sidebar-text">
                     <p>
-                        One Piece Episódio 2 - A Luta de Zoro
+                        DESSA VEZ NÓS FOMOS AO QUINTAL DOS URSOS- Ep. 1748
                     </p>
                     <p>
-                        OnePieceChannel
+                        Cade a chave?
                     </p>
                     <p>
-                        1,6 mil visualizações
+                        194 mil visualizações - há 2 dias
                     </p>
                     <p>
-                        Transmitido há 3 dias
+                        Novo
                     </p>
                 </div>
             </article>
             <article class="sidebar-item">
                 <img alt="Thumbnail" height="94"
-                    src="https://i.pinimg.com/736x/c9/1f/0c/c91f0cc8f37751fc3bac4a250b352bd0.jpg" width="168" />
+                    src="https://i.ytimg.com/vi/tWKrlA_pEP8/hqdefault.jpg?sqp=-oaymwEmCKgBEF5IWvKriqkDGQgBFQAAiEIYAdgBAeIBCggYEAIYBjgBQAE=&rs=AOn4CLDeKTGSsIWHddHI41KElplCKYmb5Q" width="168" />
                 <div class="sidebar-text">
                     <p>
-                        One Piece Episódio 3 - A História de Usopp
+                        A MELHOR (e mais cruel) JOGADA QUE EU JA FIZ DE ...
                     </p>
                     <p>
-                        OnePieceChannel
+                        Souzones
                     </p>
                     <p>
-                        1,7 mil visualizações
+                       215 mil visualizações - há 2 semanas
                     </p>
                     <p>
-                        Transmitido há 4 dias
                     </p>
                 </div>
             </article>
             <article class="sidebar-item">
                 <img alt="Thumbnail" height="94"
-                    src="https://i.pinimg.com/736x/13/ed/33/13ed33cd0fb33950770c194b973e1866.jpg" width="168" />
+                    src="https://i.ytimg.com/vi/oR8m6gRqBYQ/hqdefault.jpg?sqp=-oaymwEmCKgBEF5IWvKriqkDGQgBFQAAiEIYAdgBAeIBCggYEAIYBjgBQAE=&rs=AOn4CLACzPIilp1AEFErjA8zWlzCphl4TA" width="168" />
                 <div class="sidebar-text">
                     <p>
-                        One Piece Episódio 4 - O Cozinheiro Sanji
+                        ESSE JOGO USA O MICROFONE PARA SOLTAR MAGIAS-MAG.
                     </p>
                     <p>
-                        OnePieceChannel
+                        Mrfall Games
                     </p>
                     <p>
-                        971 visualizações
+                        9,7 mil visualizações - há 17 horas
                     </p>
                     <p>
-                        Transmitido há 5 dias
+                        Novo
                     </p>
                 </div>
             </article>
             <article class="sidebar-item">
                 <img alt="Thumbnail" height="94"
-                    src="https://i.pinimg.com/736x/0d/39/d9/0d39d94f4e0f0405088b9378d473e993.jpg" width="168" />
+                    src="https://i.ytimg.com/vi/cbbVwQ124VE/hqdefault.jpg?sqp=-oaymwEmCKgBEF5IWvKriqkDGQgBFQAAiEIYAdgBAeIBCggYEAIYBjgBQAE=&rs=AOn4CLCAxiI2rayL7RjSCuuREeIbEkkZcw" width="168" />
                 <div class="sidebar-text">
                     <p>
-                        One Piece Episódio 5 - O Médico Chopper
+                       MOUNT E COLEGAS DANDO BALA NO CS | Counter-Strike 2
                     </p>
                     <p>
-                        OnePieceChannel
+                        mount gameplays
                     </p>
                     <p>
-                        711 visualizações
+                        24 mil visualizações - ha 6 dias
                     </p>
                     <p>
-                        Transmitido há 6 dias
+                        Novo
                     </p>
                 </div>
             </article>
